Updated DisplayOptionsModal to fix themes on mobile
• Updated:
- DisplayOptionsModal to fix themes on mobile

--- a/app/javascript/styles/global.css
+++ b/app/javascript/styles/global.css
@@ -561,6 +561,7 @@ pre {
 
 .w100PC { width: 100%; }
 .w50PC { width: 50%; }
+.w48PC { width: 48%; }
 .w25PC { width: 25%; }
 .w1255PX { width: 1255px; }
 .w1015PX { width: 1015px; }
